@@ -5,11 +5,15 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Fix reference counting in X509_PUBKEY_get(). This makes
+     demos/maurice/example2.c work, amongst others, probably.
+     [Steve Henson and Ben Laurie]
+
   *) First cut of a cleanup for apps/. First the `ssleay' program is now named
      `openssl' and second, the shortcut symlinks for the `openssl <command>'
      are no longer created. This way we have a single and consistent command
      line interface `openssl <command>', similar to `cvs <command>'.
-     [Ralf S. Engelschall]
+     [Ralf S. Engelschall, Paul Sutton and Ben Laurie]
 
   *) ca.c: move test for DSA keys inside #ifndef NO_DSA. Make pubkey
      BIT STRING wrapper always have zero unused bits.
